--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -53,7 +53,7 @@
     <link href="https://cdn.jsdelivr.net/npm/animate.css@3.7.2/animate.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.css" rel="stylesheet">
-
+    <script defer src="https://js.pusher.com/8.2.0/pusher.min.js"></script>
     <script type="module" defer>
         $(document).ready(function () {
             confirmLogout();
@@ -318,7 +318,7 @@
                     background-size: 12px 12px;
                 ">
         <!-- Navbar Start -->
-        <div th:replace="fragments/navigation :: navigation-with-search"></div>
+        <div th:replace="fragments/navigation :: navigation-without-search"></div>
         <!-- Navbar End -->
 
         <!-- Search Start -->
