--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -97,6 +97,8 @@
                 <!-- modal toggle button end -->
                 <!-- sortting button -->
                 <i class="bi bi-sort-alpha-down sort-btn text-dark"></i>
+
+
             </div>
 
             <!-- Modal -->
@@ -134,14 +136,17 @@
                             style="padding: 7px;">
                     </span>
                         New Issues
-
-
                     </button>
-
-                    <span><a href="issue-table"><i class="fa-solid fa-table"></i></a></span>
+                </li>
+                <li>
+                    <div class="inline-block">
+                        <a href="issue-table"><i class="fa-solid fa-table"></i></a>
+                    </div>
 
                 </li>
             </ul>
+
+
 
             <div class="tab-content pt-2">
 
