--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -529,7 +529,7 @@
 <!--    ><i class="bi bi-arrow-up"></i-->
 <!--    ></a>-->
 </div>
-
+</div>
 
 <!--    for select drop-drown-->
 <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>-->
