--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2453,6 +2453,15 @@
                     };
 
                     console.log(project);
+                    Swal.fire({
+                        title: "Are you sure want to add?",
+                        icon: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#3085d6",
+                        cancelButtonColor: "#d33",
+                        confirmButtonText: "Yes"
+                    }).then((result) => {
+                        if (result.isConfirmed) {
                     $.ajax({
                         url: "/api/project/save", // Replace with the actual URL for your project registration endpoint
                         type: "POST",
@@ -2469,6 +2478,8 @@
                         error: function (data) {
                             alert("Error registering project");
                         },
+                    });
+                        }
                     });
                 });
             });
