--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -1218,16 +1218,16 @@
                         showsuccess('Issue Created Successfully');
                         loadData();
 
-                        $('#title').val('');
-                        $('#description').val('');
-                        $('#place').val('');
-                        $('#impact').val('');
-                        $('#root_cause').val('');
-                        $('#direct_cause').val('');
-                        $('#responsible_party').val('');
-                        $('#issue_category').val('');
-                        $('#user_pic').val('');
-                        $('#responsible_type').val('');
+                        // $('#title').val('');
+                        // $('#description').val('');
+                        // $('#place').val('');
+                        // $('#impact').val('');
+                        // $('#root_cause').val('');
+                        // $('#direct_cause').val('');
+                        // $('#responsible_party').val('');
+                        // $('#issue_category').val('');
+                        // $('#user_pic').val('');
+                        // $('#responsible_type').val('');
 
 
 
