fixed some error in issue.html

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2515,8 +2515,8 @@
             let sysSelect = VirtualSelect.init({
                 ele: "#systemOutlines",
                 options: myOptions,
+                search: false,
                 multiple: true,
-                search: true,
                 searchByStartsWith: false,
                 popupPosition: null,
                 maxWidth: "100%",
