--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -240,7 +240,7 @@
                         <div class="col-md-4">
                             <label for="plan-hours"class="col-sm-12 col-form-label">
                                 Plan Hours<span style="color: red">*</span></label>
-                            <input type="number" class="form-control border-task-description" id="plan-hours"/>
+                            <input type="number" class="form-control border-task-description" id="plan-hours" oninput="validity.valid||(value='');" min="1"/>
                         </div>
 
 
